syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/katyafirstova/chat_service/pkg/chat_v1";

service ChatV1 {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
    rpc Send(SendRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
    repeated string user_uuids = 1;
}

message CreateResponse {
    string uuid = 1;
}

message DeleteRequest {
    string uuid = 1;
}

message SendRequest {
    string sender_uuid = 1;
    string chat_uuid = 2;
    string text = 3;
}